--- a/HW2/HW33/westond.hw3.html
+++ b/HW2/HW33/westond.hw3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Name's Homework 3</title>
+    <title>Tyler's Homework 3</title>
 </head>
 <body>
     <form>
