did more changes to portfolio in css

--- a/Labs/Labs/Lab3/index.html
+++ b/Labs/Labs/Lab3/index.html
@@ -11,7 +11,7 @@
 <br>
 <header>
     <h1>Tyler Dorough</h1>
-    <p>UAB 2024|Psych Major </p>
+    <p>UAB 2024 Psych Major </p>
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
