linked my html files to my css file

--- a/HW4/index.html
+++ b/HW4/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> <title>JavaJam Coffee Bar</title>
+        <link rel="stylesheet" href="javajam.css">
     </head>
     <body>
         <h1>JavaJam Coffee Bar</h1>
