--- a/HW4/jobs.html
+++ b/HW4/jobs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> <title>JavaJam Coffee Bar</title>
+        <link rel="stylesheet" href="javajam.css">
     </head>
     <head> <title>JavaJam Coffee Bar</title>
     </head>
@@ -48,13 +49,6 @@
         </div>
     </section>
 </body>
-
-
-
-
-
-
-
 <br>
             <body>
                 <footer>
