--- a/HW4/music.html
+++ b/HW4/music.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> <title>JavaJam Coffee Bar</title>
+        <link rel="stylesheet" href="javajam.css">
     </head>
     <head> <title>JavaJam Coffee Bar</title>
     </head>
@@ -65,6 +66,4 @@
                     <small><i>Contact: <a href="mailto:wedorough@gmail.com.com">wedorough@gmail.com</a></i></small>
                 </footer>
             </body>
-
-
     </html>
