--- a/HW4/index.html
+++ b/HW4/index.html
@@ -4,7 +4,10 @@
         <link rel="stylesheet" href="javajam.css">
     </head>
     <body>
-        <h1>JavaJam Coffee Bar</h1>
+        <div id="wrapper">
+            <header>
+                <h1>JavaJam Coffee Bar</h1>
+            </header>            
         <nav>
         <a href="index.html"><strong>Home</strong></a>&nbsp;&nbsp;
         <a href="menu.html"><strong>Menu</strong></a>&nbsp;&nbsp;
@@ -30,11 +33,11 @@
             Ellison Bay, WI 54210<br>
             888-555-5555
         </div>
+    </div>
     </body>
         <footer>
             <small><i>Copyright © 2023 JavaJam Coffee Bar</i></small><br>
             <small><i>Contact: <a href="mailto:wedorough@gmail.com.com">wedorough@gmail.com</a></i></small>
         </footer>
-        
     </body>
 </html> 
