--- a/HW5/blazerId.hw5.html
+++ b/HW5/blazerId.hw5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[blazerId] - Box Model</title>
-    <link rel="stylesheet" href="[blazerId].hw5.css">
+    <link rel="stylesheet" href="blazerId.hw5.css">
 </head>
 <body>
     <header>
