--- a/Homeworks/HW6/blazerid.hw6.html
+++ b/Homeworks/HW6/blazerid.hw6.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta information -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Blazer ID - Display Models </title>
+    <!-- Link to your CSS file -->
     <link rel="stylesheet" href="blazerid.hw6.css">
 </head>
 <body>
+    <!-- Grid container that holds grid items -->
     <div class="grid-container">
+        <!-- Individual grid items -->
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
         <div class="grid-item">3</div>
