chnaged the name up top

--- a/Homeworks/HW6/blazerid.hw6.html
+++ b/Homeworks/HW6/blazerid.hw6.html
@@ -4,7 +4,7 @@
     <!-- Meta information -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Blazer ID - Display Models </title>
+    <title>Westond - Display Models </title>
     <!-- Link to your CSS file -->
     <link rel="stylesheet" href="blazerid.hw6.css">
 </head>
