--- a/Labs/Labs/Lab5/index.html
+++ b/Labs/Labs/Lab5/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="header"
-    <header>
-    <h1>Tyler Dorough</h1>
-    <p>UAB 2024 Psych Major </p>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-</div>
+    <div id="header">
+     <header>
+     <h1>Tyler Dorough</h1>
+         <p>UAB 2024 Psych Major </p>
+          <nav>
+           <ul>
+           <li><a href="#about">About</a></li>
+           <li><a href="#projects">Projects</a></li>
+           <li><a href="#contact">Contact</a></li>
+         </ul>
+         </nav>
+        </header>
+    </div>    
 
 <div id="about">
 <section>
