--- a/Labs/Labs/Lab5/index.html
+++ b/Labs/Labs/Lab5/index.html
@@ -44,6 +44,7 @@
             <a href="https://github.com/smg0092/Beach-Personality-Site.git">GitHub Repository</a>
         </li>
     </ul>
+    <img src="cute_kawaii_bumble_bee_poster-r850bb62f96ef4d8b9c6c2576c07a9095_wvk_8byvr_630.jpg" alt= "bumble bee picture" width="300" height="200">"
 </section>
 </div>
 <br>
