--- a/Labs/Labs/Lab5/index.html
+++ b/Labs/Labs/Lab5/index.html
@@ -6,6 +6,7 @@
     <title>Tyler's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Header Section -->
 <body>
     <div id="header">
      <header>
@@ -20,7 +21,7 @@
          </nav>
         </header>
     </div>    
-
+<!-- About Section -->
 <div id="about">
 <section>
     <h2>About Me</h2>
@@ -33,7 +34,7 @@
 </section>
 </div>
 <br>
-
+<!-- Projects Section -->
 <div id="projects">
     <section>
     <h2>Projects</h2>
@@ -44,9 +45,11 @@
             <a href="https://github.com/smg0092/Beach-Personality-Site.git">GitHub Repository</a>
         </li>
     </ul>
+    <!-- Image -->
     <img src="cute_kawaii_bumble_bee_poster-r850bb62f96ef4d8b9c6c2576c07a9095_wvk_8byvr_630.jpg" alt="bumble bee picture" width="300" height="200">
 </section>
 </div>
+<!-- Contact Section -->
 <br>
 <section id="contact">
     <h2>Contact</h2>
@@ -59,6 +62,7 @@
     </form>
 </section>
 <br>
+<!-- Footer Section -->
 <div id="footer"
     <footer>
          <p>&copy; 2023 Tyler Dorough</p>
