--- a/Homeworks/HW7/hw7.westond.html
+++ b/Homeworks/HW7/hw7.westond.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Photo Gallery </title>
-  <link rel="stylesheet" href="hw7.westond.css"
+  <link rel="stylesheet" href="hw7.westond.css">
 </head>
 <body>
     <header>My Interactive Photo Gallery</header>
 </body>
-   
+
 
 
 
