--- a/Homeworks/HW7/hw7.westond.html
+++ b/Homeworks/HW7/hw7.westond.html
@@ -9,6 +9,30 @@
 <body>
     <header>My Interactive Photo Gallery</header>
 </body>
+<div class="row">
+ <div class="column">
+ <img src="koala 1.avif">
+
+
+
+
+
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 
