added images in grid

--- a/Homeworks/HW7/hw7.westond.html
+++ b/Homeworks/HW7/hw7.westond.html
@@ -12,26 +12,13 @@
 <div class="row">
  <div class="column">
  <img src="koala 1.avif">
-
-
-
-
-
+ <img src="koala 2.avif">
+ <img src="koala 3.avif">
+ <img src="koala 4.avif">
+ <img src="koala 5.avif">
+ <img src="koala 6.avif">
+ <img src="koala 7.avif">
  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 
