fixed spacing in div

--- a/Homeworks/HW7/hw7.westond.html
+++ b/Homeworks/HW7/hw7.westond.html
@@ -7,23 +7,19 @@
   <link rel="stylesheet" href="hw7.westond.css">
 </head>
 <body>
-    <header>My Interactive Photo Gallery</header>
+   <header>My Interactive Photo Gallery</header>
+   <main class="photo grid">
+    <div class="row">
+        <div class="column">
+        <img src="koala 1.avif">
+        <img src="koala 2.avif">
+        <img src="koala 3.avif">
+        <img src="koala 4.avif">
+        <img src="koala 5.avif">
+        <img src="koala 6.avif">
+        <img src="koala 7.avif">
+        </div>
+       </div>
+   </main>
 </body>
-<div class="row">
- <div class="column">
- <img src="koala 1.avif">
- <img src="koala 2.avif">
- <img src="koala 3.avif">
- <img src="koala 4.avif">
- <img src="koala 5.avif">
- <img src="koala 6.avif">
- <img src="koala 7.avif">
- </div>
-</div>
-
-
-
-
-
-
 </html>
