--- a/Homeworks/HW7/hw7.westond.html
+++ b/Homeworks/HW7/hw7.westond.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Photo Gallery </title>
-  <link rel="stylesheet" href="hw7.westond.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Interactive Photo Gallery</title>
+    <link rel="stylesheet" href="hw7.blazerid.css">
 </head>
+
 <body>
-   <header>My Interactive Photo Gallery</header>
-   <main class="photo grid">
-    <div class="row">
-        <div class="column">
-        <img src="koala 1.avif">
-        <img src="koala 2.avif">
-        <img src="koala 3.avif">
-        <img src="koala 4.avif">
-        <img src="koala 5.avif">
-        <img src="koala 6.avif">
-        <img src="koala 7.avif">
-        </div>
-       </div>
-   </main>
+    <header>My Interactive Photo Gallery</header>
+    <main>
+        <div class="koala 1.avif"></div>
+        <div class="koala 2.avif"></div>
+        <div class="koala 3.avif"></div>
+        <div class="koala 4.avif"></div>
+        <div class="koala 5.avif"></div>
+        <div class="koala 6.avif"></div>
+    </main>
 </body>
+
 </html>
